<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="20dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter your email here"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"/>
    <EditText
        android:layout_below="@id/et_email"
        android:id="@+id/et_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Password"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_below="@id/et_pass"
        android:layout_width="wrap_content"
        android:layout_marginLeft="120dp"
        android:layout_height="wrap_content"
        android:text="Login" />


</RelativeLayout>